--- a/CloudHRMS/CloudHRMS/appsettings.json
+++ b/CloudHRMS/CloudHRMS/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CloudHRMSConnectionString": "server=DESKTOP-1I4SLAI;database=HRMS;User Id=sa;Password=root;TrustServerCertificate=True;"
+  },
+  "EPPlus": {
+    "ExcelPackage": {
+      "LicenseContext": "NonCommercial"
+    }
   }
 }
