--- a/CloudHRMS/CloudHRMS/CloudHRMS.csproj
+++ b/CloudHRMS/CloudHRMS/CloudHRMS.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!--for Identity (Authentication and Authorization Library-->
+    <PackageReference Include="EPPlus" Version="7.2.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.7" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.7" />
